--- a/ConsultorioDDD/Web.config
+++ b/ConsultorioDDD/Web.config
@@ -23,7 +23,8 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <customErrors mode="RemoteOnly" defaultRedirect="~/Error/Index">
-        <error statusCode="404" redirect="~/Error/NotFound" />
+      <error statusCode="401" redirect="~/Error/AccessDenied" />
+      <error statusCode="404" redirect="~/Error/NotFound" />
     </customErrors>
 
     <authentication mode="Forms">
