--- a/Infrastructure/Consultorio.Data.csproj
+++ b/Infrastructure/Consultorio.Data.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Configuration\EmpresaConfiguration.cs" />
     <Compile Include="Configuration\EstadoCivilConfiguration.cs" />
     <Compile Include="Configuration\TipoExameConfiguration.cs" />
+    <Compile Include="Configuration\TransacaoConfiguration.cs" />
     <Compile Include="Configuration\UsuarioConfiguration.cs" />
     <Compile Include="Context\ConsultorioContext.cs" />
     <Compile Include="Infrastructure\IDepartamentoRepository.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Infrastructure\IEstadoCivilRepository.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Infrastructure\ITipoExameRepository.cs" />
+    <Compile Include="Infrastructure\ITransacaoRepository.cs" />
     <Compile Include="Infrastructure\IUsuarioRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Migrations\201704282119147_inicial.cs" />
@@ -124,6 +126,10 @@
     <Compile Include="Migrations\201705090127034_v5.Designer.cs">
       <DependentUpon>201705090127034_v5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705162218067_v1.0.6.cs" />
+    <Compile Include="Migrations\201705162218067_v1.0.6.Designer.cs">
+      <DependentUpon>201705162218067_v1.0.6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DepartamentoRepository.cs" />
@@ -131,6 +137,7 @@
     <Compile Include="Repository\EstadoCivilRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\TipoExameRepository.cs" />
+    <Compile Include="Repository\TransacaoRepository.cs" />
     <Compile Include="Repository\UsuarioRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
@@ -180,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705090127034_v5.resx">
       <DependentUpon>201705090127034_v5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705162218067_v1.0.6.resx">
+      <DependentUpon>201705162218067_v1.0.6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
